--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
-primaryColor = "#E694FF"
-backgroundColor = "#00172B"
-secondaryBackgroundColor = "#0083B8"
-textColor = "#DCDCDC"
-font = "sans-serif"
+ primaryColor="#3872fb"
+ backgroundColor="#0e1117"
+ secondaryBackgroundColor="#cece1b"
+ textColor="#fafafa"
+ font="sans serif"
